# agh-tk

./: .gitignore  README.md  docker-compose.yaml
archive_service/: Dockerfile  README.md  build.sbt
audio_service/: .gitignore  Dockerfile  audio_extractor_callback.py  audio_extractor_run.py  dockerignore  requirements.txt
converter/: Dockerfile  converter_callback.py  converter_run.py
e2e/: test.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
microsoft_service/: docker-compose.dcproj  docker-compose.yml  microsoftService.sln
ocr_service/: Dockerfile  pom.xml
odt_service/: Dockerfile  pom.xml
pdf_service/: Dockerfile  build.sbt
rabbitmq/: Dockerfile  definitions.json  rabbitmq.conf
scraper/: Dockerfile  mix.exs
state_service/: Dockerfile  pom.xml
textAnalyzer/: textAnalyzer.sln
textExtractor/: Dockerfile  Extractor_callback.py  receive.py  receive_config.py  receive_connect.py  send.py  send_connect.py  test.txt  test2.py  textExtractor_run.py  textExtractor_test.py
translation/: Dockerfile  app.js  package.json
video_service/: Cargo.toml  Dockerfile  Dockerfile.test  ReadMe.md
video_service/src/: frameExtractor.rs  frame_extractor.rs  main.rs
wordsForms/: Dockerfile  Forms_functions.py  Forms_receive.py  Forms_receive_config.py  Forms_receive_connect.py  Forms_send_config.py  Forms_send_connect.py  Forms_test.py  wordForms_run.py
wordsServices_textExtractor_config/: callback_config.py  receive_config.py  receive_connect.py  run_config.py  send_connect.py
wordsSynonyms/: Dockerfile  Synonyms_functions.py  (+9 more)
(+105 files in other folders)
