[package]
name = "video_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4"
env_logger = "0.9.0"
log = "0.4.16"
serde_json = "1.0.79"
opencv = {version = "0.63"}
chrono = "0.4.19"